# ai-document

./: .env.example  .gitignore  LICENCE  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  PR_BODY.md  alembic.ini  docker-entrypoint.sh  pyproject.toml  requirements-dev.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260523_001_initial_workflows.py  20260621_002_add_mcp_connections.py  20260622_003_add_mcp_kb_fields.py
backend/app/: main.py
backend/app/agents/lead_writer/: agent.py
backend/app/agents/orchestrator/: agent.py
backend/app/agents/procurement/: agent.py
backend/app/agents/quality/: agent.py
backend/app/agents/requirement/: agent.py
backend/app/api/routes/: mcp.py  templates.py  workflow.py
backend/app/api/websocket/: stream.py
backend/app/config/: configuration.yaml
backend/app/config/agents/: lead_writer.yaml  orchestrator.yaml  procurement.yaml  quality.yaml  requirement.yaml
backend/app/core/: agent_config.py  app_config.py  config.py  json_extract.py  llm.py  template_config.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/mcp/client/: __init__.py  mcp_client.py
backend/app/skills/export/: export_skill.py
backend/app/skills/retrieval/: retrieval_skill.py
backend/app/skills/validation/: schema.py  validation_skill.py
backend/app/tests/: conftest.py  test_agent_config.py  test_integration_pipeline.py  test_json_extract.py  test_mcp_client.py  test_nanorag_adapter.py  test_procurement_agent.py  test_requirement_agent.py  test_retrieval_skill.py  test_schema.py  test_state_machine.py  test_template_config.py  test_template_rendering.py  test_validation_skill.py  test_workflow_persistence.py  test_workflow_runner.py
(+53 files in other folders)
